ViTables ChangeLog
==================
** Dec 18, 2008**
	The Copy Node operation  has been greatly optimized.

	Fixed an encoding related problem in the file opening procedure.

	Fixed a minor issue with the vertical header of large tables.

	The procedure for creating a Windows installer has been changed in order
	to deal properly with PyQt4.

** Dec 16, 2008**
	Fixed some bugs regarding portability between different platforms

** Dec 15, 2008**
	Fixed a problem in setup.py.

	Applied several simplifications derived from the use of Qt resources system.

	Fixed some bugs regarding portability between different platforms.

** Dec 13, 2008**
	Project clean-up and final changes.

** Dec 12, 2008**
	The preferences package has been refactored.

** Dec 11, 2008**
	Zooming cells with string content has been fixed.

	Fixed an annoying bug introduced in changeset 184e748db458.

** Dec 10, 2008**
	A context menu has been added to the workspace.

	The User's Manual has been updated.

	The documentation browser has been updated.

	The module in charge of application configuration has been updated.

	Fixed a small bug in the Properties dialog.

	Changed the trigger for in-place renaming of nodes in the tree of databases
	pane.

	The Properties dialog has been debugged and improved.

** Dec 09, 2008**
	ANNOUNCE.txt and setup.py have been updated.

	Fixed a bug in scripts/vitables.

	Fixed a small l10n problem.

** Dec 08, 2008**
	Fixed a small bug in insertion of nodes in the tree of databases pane.

** Dec 05, 2008**
	Fixed a subtle bug in the datasets access process.

	A small bug has been fixed.

	File Save As... operation has been debugged.

	Enhanced the render of datasets with just one row/column.

	Fixed a small bug in the synchronisation of the workspace with the tree of
	databases pane.

** Dec 04, 2008**
	A minor problem found in tables queries have been fixed.

	The content of just created filtered tables is now automatically displayed.
